src/pages/LendPage/components/LendCard/LendCard.module.less
.card {
  border-bottom: var(--border-less-primary);
  cursor: pointer;
  width: 100%;
}
.card.active {
  border: 0;
}

.row {
  display: flex;
  align-items: center;
  gap: 24px;
  width: 100%;
}

.cardBody {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  padding: 12px 24px;
  width: 100%;

  @media (max-width: 960px) {
    flex-direction: column;
    align-items: flex-start;
    padding: 12px 16px;
    gap: 16px;
  }

  &.active {
    @media (max-width: 640px) {
      gap: unset;
    }
  }
}

.chevronButton {
  display: flex;

  @media (max-width: 960px) {
    position: absolute;
    top: 28px;
    right: 24px;
  }

  svg {
    width: 24px;
    height: 24px;
  }
}
.chevronButton.active svg {
  transform: rotate(180deg);
}

